--- a/src/styles.css
+++ b/src/styles.css
@@ -38,9 +38,16 @@ h1 {
   color: #3bb4c1;
 }
 
-.units {
+#celsius,
+#fahrenheit {
+  text-decoration: none;
+  color: #696464;
+}
+
+.weather-temperature .units {
   font-size: 15px;
   vertical-align: text-top;
+  text-decoration: none;
 }
 
 .weekday-time {
@@ -62,6 +69,15 @@ h1 {
 .sun {
   font-size: 40px;
   color: #3bb4c1;
+}
+
+.weather-temperature .active {
+  color: #3bb4c1;
+  cursor: default;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
 }
 
 #description {
