--- a/src/styles.css
+++ b/src/styles.css
@@ -45,26 +45,11 @@ h1 {
   color: #696464;
 }
 
-.weekday-time {
-  padding: 10px 0 0;
-  color: #696464;
-  text-align: left;
-}
-
-.icon {
-  max-width: 70px;
-  background-color: transparent;
-}
-
 .iconTemp {
   max-width: 400px;
   float: inline-end;
 }
 
-.sun {
-  font-size: 40px;
-  color: #3bb4c1;
-}
 .weather-temperature a {
   color: #696464;
   text-decoration: none;
@@ -89,20 +74,13 @@ h1 {
   text-align: center;
 }
 
-.days {
-  color: #3bb4c1;
-  font-size: 30px;
-  font-weight: bold;
-  margin: 60px 0 0;
-}
-.weather-icon {
-  font-size: 30px;
-  padding: 10px;
-  color: #696464;
-}
-.daily-temp {
+.weather-forecast-temperature {
   color: #5c636e;
-  font-size: 15px;
+  font-size: 16px;
+}
+
+.weather-forecast-date {
+  color: #3bb4c1;
 }
 
 ul {
