--- a/src/styles.css
+++ b/src/styles.css
@@ -74,13 +74,19 @@ h1 {
   text-align: center;
 }
 
+.weather-forecast-date {
+  color: #3bb4c1;
+  font-weight: bold;
+  font-size: larger;
+}
+
 .weather-forecast-temperature {
   color: #5c636e;
   font-size: 16px;
 }
 
-.weather-forecast-date {
-  color: #3bb4c1;
+.weather-forecast-temperature-min {
+  opacity: 0.6;
 }
 
 ul {
