Removed HTML & injected HTML from JS
Removed weather forecast from HTML and injected it through JS

Added a loop to replicate the daily forecast

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,9 @@ h1 {
   color: #3bb4c1;
   font-weight: bold;
   font-size: larger;
+  text-align: center;
+  opacity: 0.6;
+  margin: 20px 10px 10px;
 }
 
 .weather-forecast-temperature {
