--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .weather-app {
-  background-color: #e7eaf6;
+  background-color: #e3e3e3;
   padding: 50px 30px;
   margin: 50px auto;
   max-width: 700px;
