--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
   margin: 50px auto;
   max-width: 700px;
   text-align: center;
-  border: 3px solid #00204a;
+  border: 3px solid #3bb4c1;
   border-radius: 10px;
   font-family: "Plus Jakarta Sans", sans-serif;
 }
@@ -13,6 +13,7 @@
   border-radius: 30px;
   margin: 0 0 30px;
   text-align: center;
+  border: 1px solid #393e46;
 }
 
 .button {
